App data models/service added

--- a/michieloppenheimer.io/Views/Shared/Error.cshtml
+++ b/michieloppenheimer.io/Views/Shared/Error.cshtml
@@ -1,22 +1,55 @@
-﻿@model ErrorViewModel
+﻿@model int
 @{
-    ViewData["Title"] = "Error";
+    var statusCode = Model;
+    var statusmessage = "";
+    switch (statusCode)
+    {
+        case 400:
+            statusmessage = "Bad request: The request cannot be fulfilled due to bad syntax";
+            break;
+        case 403:
+            statusmessage = "Forbidden";
+            break;
+        case 404:
+            statusmessage = "Page not found";
+            break;
+        case 408:
+            statusmessage = "The server timed out waiting for the request";
+            break;
+        case 500:
+            statusmessage = "Internal Server Error - server was unable to finish processing the request";
+            break;
+        default:
+            statusmessage = "That’s odd... Something we didn't expect happened";
+            break;
+    }
+
+    ViewData["Title"] = statusmessage;
 }
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
 
-@if (Model.ShowRequestId)
-{
-    <p>
-        <strong>Request ID:</strong> <code>@Model.RequestId</code>
-    </p>
-}
+<!-- start: uk-section-secondary -->
+<div class="uk-section-default uk-section-large">
+    <!-- start: uk-container uk-container-large -->
+    <div class="uk-container uk-container-large">
+        <div class="tm-header-placeholder uk-margin-remove-adjacent" style="height: 140px"></div>
 
-<h3>Development Mode</h3>
-<p>
-    Swapping to <strong>Development</strong> environment will display more detailed information about the error that occurred.
-</p>
-<p>
-    <strong>Development environment should not be enabled in deployed applications</strong>, as it can result in sensitive information from exceptions being displayed to end users. For local debugging, development environment can be enabled by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>, and restarting the application.
-</p>
+        <!-- start: uk-margin-large uk-grid-stack -->
+        <div class="uk-margin-large uk-grid-stack" uk-grid>
+            <!-- start: uk-width-1-1@m uk-first-column -->
+            <div class="uk-width-1-1@m uk-first-column">
+                <h1 class="uk-heading-hero">
+                    Error @Model
+                </h1>
+                <div class="uk-divider-small"></div>
+                <p class="uk-hero-small">@statusmessage</p>
+            </div>
+            <!-- end: uk-width-1-1@m uk-first-column -->
+        </div>
+        <!-- end: uk-margin-large uk-grid-stack -->
+
+
+    </div>
+    <!-- end: uk-container uk-container-large -->
+</div>
+<!-- end: uk-section-secondary -->
