--- a/michieloppenheimer.io/Views/Shared/_Layout.cshtml
+++ b/michieloppenheimer.io/Views/Shared/_Layout.cshtml
@@ -202,6 +202,7 @@
         <script src="~/js/site.js" asp-append-version="true"></script>
         <script src="~/lib/uikit-3.0.0-rc.15/js/uikit.min.js" asp-append-version="true"></script>
         <script src="~/lib/uikit-3.0.0-rc.15/js/uikit-icons.js" asp-append-version="true"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/run_prettify.js" asp-append-version="true"></script>
     </environment>
     <environment exclude="Development">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"
@@ -221,6 +222,12 @@
                 asp-fallback-test="window.jQuery"
                 crossorigin="anonymous"
                 integrity="sha384-pt2UltBr/PtYb8Mca371LsdADo1QKBGQc68dxeRELc0lJIYBu9lbV2FyujJhd0e9">
+        </script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/run_prettify.min.js"
+                asp-fallback-src="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/run_prettify.min.js"
+                asp-fallback-test="window.jQuery"
+                crossorigin="anonymous"
+                integrity="sha384-FdDXhXktS7qbSx5SLuIH0p/V4mGwTw7hiWJsJeP0Mk8kCyd3hH+yv2UmzSn++Ghh">
         </script>
 
 
