--- a/michieloppenheimer.io/Views/_ViewImports.cshtml
+++ b/michieloppenheimer.io/Views/_ViewImports.cshtml
@@ -1,3 +1,7 @@
-﻿@using michieloppenheimer.io
-@using michieloppenheimer.io.Models
+﻿@using Blog.Web
+@using Blog.Models
+@using Microsoft.Extensions.Options
+@using WebEssentials.AspNetCore.Pwa
+@addTagHelper *, WebOptimizer.Core
+@addTagHelper *, WebEssentials.AspNetCore.CdnTagHelpers
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
