app cleanup / models updated / logic updated

--- a/michieloppenheimer.io/Views/Shared/_LayoutConsole.cshtml
+++ b/michieloppenheimer.io/Views/Shared/_LayoutConsole.cshtml
@@ -6,7 +6,7 @@
 <html lang="en-GB">
 <head prefix="og: http://ogp.me/ns#">
     <meta charset="utf-8" />
-    <title>WheelsFoodCook @ViewData["Title"]</title>
+    <title>michieloppenheimer.io @ViewData["Title"]</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet" />
     <environment include="Development">
@@ -34,7 +34,7 @@
                 <div class="uk-navbar-left">
                     <a id="sidebar_toggle" class="uk-navbar-toggle" uk-navbar-toggle-icon></a>
                     <a href="#" class="uk-navbar-item uk-logo">
-                        WheelsFoodCook - Admin Console
+                        michieloppenheimer.io - Admin Console
                     </a>
                 </div>
                 <!-- end: uk-navbar-left -->
